@@ -6,7 +6,7 @@ Version 1.7.3
        many bugtrack links. (Stefan)
 - BUG: Issue 155: crash when accessing a server with
        an invalid ssl certificate. (Stefan)
-- BUG: Issue #156: 	subdir within WC not
+- BUG: Issue #156: subdir within WC not
        recognized as WC. (Stefan)
 - BUG: Issue #157: Title Bar not updating with
        currently viewed repository. (Stefan)
@@ -14,6 +14,13 @@ Version 1.7.3
        returns a relative commonURL. (Stefan)
 - BUG: Issue #159: folder browse dialog can be
        closed with invalid paths. (Stefan)
+- BUG: Issue #160: Repo browser shows
+       incorrect contents for directories
+       that differ only by case. (Stefan)
+- NEW: Issue #113: Option to turn off pre-fetching
+       and external parsing in repo browser. (Stefan)
+- BUG: Issue #161: repo browser shows invalid
+       commands for the root. (Stefan)
 
 Version 1.7.2
 - BUG: Issue #111: Crash in initializing
